Add methods and work on network theory

--- a/ociamthesis.cls
+++ b/ociamthesis.cls
@@ -460,6 +460,9 @@
 \usepackage{subcaption}
 \captionsetup[sub]{font=footnotesize,labelfont=bf}
 
+% Matrices
+\usepackage{blkarray, bigstrut}
+
 % Additional definitions
 \usepackage{shortcuts}
 
