--- a/references.bib
+++ b/references.bib
@@ -26,6 +26,27 @@ title = {{Two-dimensional silica opens new perspectives}},
 volume = {92},
 year = {2017}
 }
+@book{barabasi2016n,
+abstract = {La 4{\`{e}}me de couverture indique : "Networks are everywhere, from the Internet, to social networks, and the genetic networks that determine our biological existence. Illustrated throughout in full colour, this pioneering textbook, spanning a wide range of topics from physics to computer science, engineering, economics and the social sciences, introduces network science to an interdisciplinary audience. From the origins of the six degrees of separation to explaining why networks are robust to random failures, the author explores how viruses like Ebola and H1N1 spread, and why it is that our friends have more friends than we do. Using numerous real-world examples, this innovatively designed text includes clear delineation between undergraduate and graduate level material"},
+address = {Cambridge},
+author = {Barab{\'{a}}si, Albert-L{\'{a}}szl{\'{o}} and P{\'{o}}sfai, M{\'{a}}rton},
+isbn = {9781107076266 1107076269},
+keywords = {required sna snaseminar},
+publisher = {Cambridge University Press},
+title = {{Network science}},
+url = {http://barabasi.com/networksciencebook/},
+year = {2016}
+}
+@article{Fowler1996,
+author = {Fowler, P W and Heine, T and Manolopoulos, D E and Mitchell, D and Orlandi, G and Schmidt, R and Seifert, G and Zerbetto, F},
+doi = {10.1021/jp9532226},
+file = {:Users/David/Documents/Work/DPhil/Papers/jp9532226.pdf:pdf},
+journal = {J Phys Chem},
+pages = {6984--6991},
+title = {{Energetics of Fullerenes with Four-Membered Rings}},
+volume = {100},
+year = {1996}
+}
 @article{Ladan2019,
 author = {Ladan, M Kokalj and Ziherl, P and {\v{S}}iber, A},
 doi = {10.1103/PhysRevE.100.012410},
@@ -85,6 +106,17 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/23093181{\%}5Cnhttp://www.nature.com/d
 volume = {3},
 year = {2012}
 }
+@article{Caer1993,
+author = {Ca{\"{e}}r, G. Le and Delannay, R.},
+doi = {10.1088/0305-4470/26/16/011},
+file = {:Users/David/Documents/Work/DPhil/Papers/G{\_}Le{\_}Caer{\_}1993{\_}J.{\_}Phys.{\_}A{\%}3A{\_}Math.{\_}Gen.{\_}26{\_}011.pdf:pdf},
+issn = {13616447},
+journal = {J. Phys. A},
+pages = {3931--3954},
+title = {{Correlations in Topological Models of 2d Random Cellular Structures}},
+volume = {26},
+year = {1993}
+}
 @article{Lichtenstein2012b,
 abstract = {The interface between a crystalline and a vitreous phase of a thin metal supported silica film was studied by low temperature scanning tunneling microscopy. The locally resolved evolution of Si-Si nearest neighbor distances and characteristic angles was evaluated across the border. Furthermore, we investigated the behavior of the ring size distribution close to the crystalline-vitreous transition. The crystalline order was found to decay gradually within about 1.6 nm into the vitreous state.},
 author = {Lichtenstein, Leonid and Heyde, Markus and Freund, Hans Joachim},
@@ -132,6 +164,18 @@ pages = {199--239},
 title = {{Soap, cells and statistics-random patterns in two dimensions}},
 volume = {50},
 year = {2009}
+}
+@article{Fortes1995,
+abstract = {Two- and three-dimensional networks of a columnar type are described, which result from partitions based on {\{}Poisson{\}} point distributions. The metric and topological properties of such laminated {\{}Poisson{\}} networks are derived and the applicability of the lewis and aboav-{\{}Weaire{\}} laws to them is tested. The 2d {\{}Poisson{\}} network contains cells with i greater than or equal to 4 (i is the number of sides) and both laws are obeyed. The 3d {\{}Poisson{\}} networks are of various types and have f greater than or equal to 6 (f is the number of faces in a cell) and ({\$}) over bar f = 14. In one particular type of 3d {\{}Poisson{\}} network the two laws are again exactly obeyed. In another type, the laws show large deviations at low f but are asymptotically obeyed when f tends to infinite.},
+author = {Fortes, M. A.},
+doi = {10.1088/0305-4470/28/4/027},
+file = {:Users/David/Documents/Work/DPhil/Papers/M{\_}A{\_}Fortes{\_}1995{\_}J.{\_}Phys.{\_}A$\backslash$:{\_}Math.{\_}Gen.{\_}28{\_}027.pdf:pdf},
+issn = {03054470},
+journal = {J. Phys. A},
+pages = {1055--1068},
+title = {{Applicability of the Lewis and Aboav-Weaire laws to 2D and 3D cellular structures based on Poisson partitions}},
+volume = {28},
+year = {1995}
 }
 @article{Roy2019,
 author = {Roy, Projesh Kumar and Heuer, Andreas},
@@ -274,6 +318,27 @@ title = {{Characterization of Phonon Vibrations of Silica Bilayer Films}},
 volume = {123},
 year = {2019}
 }
+@article{Cerisier1996,
+author = {Cerisier, P and Rahal, S and Rivier, N},
+file = {:Users/David/Documents/Work/DPhil/Papers/PhysRevE.54.5086.pdf:pdf},
+journal = {Phys. Rev. E},
+number = {5},
+pages = {5086--5094},
+title = {{Topological correlations in Benard-Marangoni convective structures}},
+volume = {54},
+year = {1996}
+}
+@article{Kim2014,
+author = {Kim, Sangwoo and Cai, Muyun and Hilgenfeldt, Sascha},
+doi = {10.1088/1367-2630/16/1/015024},
+file = {:Users/David/Documents/Work/DPhil/Papers/Kim{\_}2014{\_}New{\_}J.{\_}Phys.{\_}16{\_}015024.pdf:pdf},
+issn = {13672630},
+journal = {New J. Phys.},
+pages = {015024},
+title = {{Lewis' law revisited: the role of anisotropy in size-topology correlations}},
+volume = {16},
+year = {2014}
+}
 @article{Malashevich2016,
 abstract = {Density functional theory was used to assess the viability of approaches to controlling the structure of a recently discovered two-dimensional form of SiO2. In accord with prior work, a hexagonal bilayer of mirror image planes of corner-sharing SiO4 tetrahedra in six-membered rings yielded only a slightly higher energy than $\alpha$-quartz. Structures including four- through eight-membered rings were evaluated and in certain cases found to be as little as 17 meV/Si higher in energy than the hexagonal bilayer. When either biaxial or uniaxial tensile strain was applied, combinations of eight-, six-, and four-membered rings became favored due to the lower density of structures with larger rings. These findings, together with experiments that reveal expansion of silica bilayers to match the lattice of metal substrates, suggest that epitaxial strain may be used to control the bilayer structure. Replacement of Si with Ge and Al as prototypical tetravalent and trivalent dopants was also investigated. Substituting Ge for Si was energetically unfavorable and offered no obvious advantage for structural control over pure SiO2 bilayers. In contrast, Al substitution was energetically favorable and only minimally distorted the bilayer. It was found that while the hexagonal bilayer remained favored, the extra-framework electron donors K and H that accompany each Al preferred to occupy larger rings when possible, thus forcing Al to reside in large rings as well. This suggests that the bilayer structure may be controlled through substitution of Si for trivalent dopants and selection of extra-framework electron donors that favor larger rings.},
 author = {Malashevich, Andrei and Ismail-Beigi, Sohrab and Altman, Eric I.},
@@ -332,6 +397,17 @@ title = {{Relating local structures, energies, and occurrence probabilities in a
 volume = {31},
 year = {2019}
 }
+@article{Gervois1992,
+author = {Gervois, A. and Troadec, J. P. and Lemaitre, J.},
+doi = {10.1088/0305-4470/25/23/014},
+file = {:Users/David/Documents/Work/DPhil/Papers/A{\_}Gervois{\_}1992{\_}J.{\_}Phys.{\_}A{\%}3A{\_}Math.{\_}Gen.{\_}25{\_}014.pdf:pdf},
+issn = {03054470},
+journal = {J. Phys. A},
+pages = {6169--6177},
+title = {{Universal properties of Voronoi tessellations of hard discs}},
+volume = {25},
+year = {1992}
+}
 @article{Stone1986,
 author = {Stone, A J and Wales, D J},
 file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-0009261486806613-main.pdf:pdf},
@@ -341,6 +417,16 @@ pages = {501--503},
 title = {{Theoretical Studies of Icosahedra C60 and Some Related Species}},
 volume = {128},
 year = {1986}
+}
+@article{Ressouche2009,
+author = {Ressouche, E and Simonet, V and Canals, B and Gospodinov, M and Skumryev, V},
+doi = {10.1103/PhysRevLett.103.267204},
+file = {:Users/David/Documents/Work/DPhil/Papers/PhysRevLett.103.267204-2.pdf:pdf},
+journal = {Phys. Rev. Lett.},
+pages = {267204},
+title = {{Magnetic Frustration in an Iron-Based Cairo Pentagonal Lattice}},
+volume = {103},
+year = {2009}
 }
 @article{Zachariasen1932,
 author = {Zachariasen, W H},
@@ -407,6 +493,15 @@ url = {http://dx.doi.org/10.1016/j.carbon.2014.04.005},
 volume = {75},
 year = {2014}
 }
+@article{Rivier1988,
+author = {Rivier, N and Weaire, D and Romer, R},
+file = {:Users/David/Documents/Work/DPhil/Papers/Rivier, Weaire, de R{\"{o}}mer - 1988 - Tetrahedrally bonded random networks without odd rings.pdf:pdf},
+journal = {J. Non. Cryst. Solids},
+pages = {287--291},
+title = {{Tetrahedrally Bonded Random Networks Without Odd Rings}},
+volume = {105},
+year = {1988}
+}
 @article{Flores2017,
 author = {Flores, J C},
 doi = {10.1039/c6sm02849g},
@@ -417,6 +512,18 @@ publisher = {Royal Society of Chemistry},
 title = {{Mean-field crack networks on desiccated films and their applications : Girl with a Pearl Earring}},
 volume = {13},
 year = {2017}
+}
+@article{Lewis1928,
+author = {Lewis, F. T.},
+doi = {10.1023/A:1012518317520},
+file = {:Users/David/Documents/Work/DPhil/Papers/Lewis-1928-The{\_}Anatomical{\_}Record.pdf:pdf},
+issn = {1573837X},
+journal = {Anat. Rec.},
+number = {3},
+pages = {341--376},
+title = {{The correlation between cell division and the shapes and sizes of prismatic cell in the epidermis of cucumis}},
+volume = {38},
+year = {1928}
 }
 @article{Tong2017,
 author = {Tong, Mingming and Cole, Katie and Brito-Parada, Pablo R and Neethling, Stephen and Cilliers, Jan J},
@@ -466,6 +573,15 @@ pages = {39},
 title = {{Cracking mud, freezing dirt, and breaking rocks}},
 volume = {67},
 year = {2014}
+}
+@article{Yuan2002,
+author = {Yuan, Xianglong and Cormack, A N},
+file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-S0927025601002567-main-2.pdf:pdf},
+journal = {Comput. Mater. Sci.},
+pages = {343--360},
+title = {{Efficient algorithm for primitive ring statistics in topological networks}},
+volume = {24},
+year = {2002}
 }
 @article{Lichtenstein2012,
 abstract = {Clear as glass: The atomic structure of a metal-supported vitreous thin silica film was resolved using low-temperature scanning tunneling microscopy (STM). Based on the STM image, a model was constructed and the atomic arrangement of the thin silica glass determined (see picture). The total pair correlation function of the structural model shows good agreement with diffraction experiments performed on vitreous silica.},
@@ -590,6 +706,27 @@ pages = {78--81},
 title = {{Crocodile Head Scales Are Not Developmental Units But Emerge From Physical Cracking}},
 volume = {339},
 year = {2019}
+}
+@article{Miklius2012,
+abstract = {Random tilings or packings in the plane are characterized by a size distribution of individual elements (domains) and by the statistics of neighbor relations between the domains. Most systems occurring in nature or technology have a unimodal distribution of both areas and ... $\backslash$n},
+author = {Miklius, Matthew P. and Hilgenfeldt, Sascha},
+doi = {10.1103/PhysRevLett.108.015502},
+file = {:Users/David/Documents/Work/DPhil/Papers/PhysRevLett.108.015502.pdf:pdf},
+issn = {00319007},
+journal = {Phys. Rev. Lett.},
+pages = {015502},
+title = {{Analytical results for size-topology correlations in 2D disk and cellular packings}},
+volume = {108},
+year = {2012}
+}
+@article{Aboav1984,
+author = {Aboav, D. A.},
+file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-0026080084900752-main.pdf:pdf},
+journal = {Metallography},
+pages = {383--396},
+title = {{The Arrangement of Cells in a Net. III}},
+volume = {17},
+year = {1984}
 }
 @article{Glassmeier2017,
 author = {Glassmeier, Franziska and Feingold, Graham},
