--- a/shortcuts.sty
+++ b/shortcuts.sty
@@ -8,9 +8,16 @@
 
 % Names
 \newcommand{\zach}{Zachariasen}
+\newcommand{\lm}{Lem\^aitre}
 \newcommand{\aw}{Aboav\--Weaire}
 
 % Abbreviations
 \newcommand{\td}{two\--dimensional}
 \newcommand{\thd}{three\--dimensional}
+
+% Maths
+\newcommand{\ki}{\langle k \rangle}
+\newcommand{\kii}{\langle k^2 \rangle}
+\newcommand{\sumk}{\sum\limits_k}
+\newcommand{\sumjk}{\sum\limits_{jk}}
 
