--- a/thesis.tex
+++ b/thesis.tex
@@ -205,6 +205,7 @@
 \flushbottom
 %\include{text/chapter_template}
 \include{text/introduction}
+\include{text/methods}
 %\include{text/bilayers}
 
 
