Add to newtork theory

--- a/references.bib
+++ b/references.bib
@@ -47,6 +47,17 @@ title = {{Energetics of Fullerenes with Four-Membered Rings}},
 volume = {100},
 year = {1996}
 }
+@article{Pedro2008,
+author = {Pedro, P and Saraiva, J and Bandeira, L and Antunes, J},
+doi = {10.1016/j.pss.2008.09.020},
+file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-S0032063308002869-main-2.pdf:pdf},
+journal = {Planet. Space Sci.},
+keywords = {geometry,mars,polygonal terrains,topology},
+pages = {1919--1924},
+title = {{Polygonal terrains on Mars : A contribution to their geometric and topological characterization}},
+volume = {56},
+year = {2008}
+}
 @article{Ladan2019,
 author = {Ladan, M Kokalj and Ziherl, P and {\v{S}}iber, A},
 doi = {10.1103/PhysRevE.100.012410},
@@ -252,6 +263,16 @@ pages = {411--418},
 title = {{Comments on "Aboav's Rule" for the Arrangement of Cells in a Network}},
 volume = {17},
 year = {1984}
+}
+@article{LeRoux2013,
+author = {{Le Roux}, S and Rezai-Aria, F},
+doi = {10.1088/0022-3727/46/29/295301},
+file = {:Users/David/Documents/Work/DPhil/Papers/Le{\_}Roux{\_}2013{\_}J.{\_}Phys.{\_}D{\%}3A{\_}Appl.{\_}Phys.{\_}46{\_}295301.pdf:pdf},
+journal = {J. Phys. D},
+pages = {295301},
+title = {{Topological and metric properties of microscopic crack patterns : application to thermal fatigue of high temperature}},
+volume = {46},
+year = {2013}
 }
 @article{Dunn1957,
 author = {Dunn, C G and Koch, E F},
@@ -513,6 +534,18 @@ title = {{Mean-field crack networks on desiccated films and their applications :
 volume = {13},
 year = {2017}
 }
+@article{Chiu1995,
+abstract = {A brief review of Aboav's law (the relationship between the average number of edges of a randomly chosen neighboring cell of a typical n-cell and n) and Lewis' law (the relationship between the mean area of a typical n-cell and n) is presented. These two laws now play central roles in Rivier's maximum entropy theory of statistical crystallography. A discussion of the mathematical forms of these laws is our emphasis in this article. {\textcopyright} 1995.},
+author = {Chiu, S. N.},
+doi = {10.1016/1044-5803(94)00081-U},
+file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-104458039400081U-main.pdf:pdf},
+issn = {10445803},
+journal = {Mater. Charact.},
+pages = {149--165},
+title = {{Aboav-Weaire's and Lewis' laws - A review}},
+volume = {34},
+year = {1995}
+}
 @article{Lewis1928,
 author = {Lewis, F. T.},
 doi = {10.1023/A:1012518317520},
@@ -548,6 +581,16 @@ title = {{Phase-dependent mechanical properties of two-dimensional silica films:
 url = {https://doi.org/10.1016/j.commatsci.2017.10.005},
 volume = {142},
 year = {2018}
+}
+@article{Mombach1993,
+author = {Mombach, J. C. M. and de Almeida, R. M. C. and Iglesias, J. R.},
+file = {:Users/David/Documents/Work/DPhil/Papers/PhysRevE.47.3712.pdf:pdf},
+journal = {Phys. Rev. E},
+number = {5},
+pages = {3712--3717},
+title = {{Two-cell correlations in biological tissues}},
+volume = {47},
+year = {1993}
 }
 @article{Kotakoski2011,
 abstract = {While crystalline two-dimensional materials have become an experimental reality during the past few years, an amorphous 2-D material has not been reported before. Here, using electron irradiation we create an sp2-hybridized one-atom-thick flat carbon membrane with a random arrangement of polygons, including four-membered carbon rings. We show how the transformation occurs step-by-step by nucleation and growth of low-energy multi-vacancy structures constructed of rotated hexagons and other polygons. Our observations, along with first-principles calculations, provide new insights to the bonding behavior of carbon and dynamics of defects in graphene. The created domains possess a band gap, which may open new possibilities for engineering graphene-based electronic devices.},
@@ -760,6 +803,15 @@ publisher = {Nature Publishing Group},
 title = {{Design of crystal-like aperiodic solids with selective disorder–phonon coupling}},
 volume = {7},
 year = {2016}
+}
+@article{Noever1992,
+author = {Noever, David A},
+file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-016666229280006N-main.pdf:pdf},
+journal = {Colloids and Surfaces},
+pages = {243--247},
+title = {{Statistics of emulsion lattices}},
+volume = {62},
+year = {1992}
 }
 @article{Thorneywork2017,
 author = {Thorneywork, Alice L and Abbott, Joshua L and Aarts, Dirk G A L and Dullens, Roel P A},
